
h2(#sirius7.0.0). Changes in Sirius 7.0.0

h3. User-Visible Changes

* <span class="label label-info">Modified</span> The selection of images from the workspace to change the style of an element in a diagram has been improved. The UI can now provide a preview of the images on the workspace by displaying them in a gallery based on the selected project or directory.
* <span class="label label-danger">Removed</span> It is no longer possible to change the workspace image of a diagram element with an image from an internal plugin via the "Set style to workspace image" action. This functionality affects a very small part of the use cases. The new UI of the "Set style to workspace image" action does not support this advanced functionality. However, it is still possible to go through Properties > Style > Workspace Image, then paste the path of the internal plugin image.

h3. Developer-Visible Changes

* <span class="label label-success">Added</span> Sirius core and dialects metamodels have been extracted in new **.model** plugins with minimum dependencies. Each new plugin is re-exported by the plugin which was the previous container of its metamodel. The base packages of the generated code has not been modified. Each API modification is listed in the corresponding plugin section. Additional dialect providers and extension providers might have to modify the path or references to Sirius .ecore and .genmodel files to reflect this change. The new plugins are:
** @org.eclipse.sirius.model@, re-exported by @org.eclipse.sirius@
** @org.eclipse.sirius.diagram.model@, re-exported by @org.eclipse.sirius.diagram@
** @org.eclipse.sirius.diagram.sequence.model@, re-exported by @org.eclipse.sirius.diagram.sequence@
** @org.eclipse.sirius.table.model@, re-exported by @org.eclipse.sirius.table@
** @org.eclipse.sirius.tree.model@, re-exported by @org.eclipse.sirius.tree@