@@ -194,6 +194,7 @@
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The selection of images from the workspace to change the style of an element in a diagram has been improved. The UI can now provide a preview of the images on the workspace by displaying them in a gallery based on the selected project or directory.</li>
+			<li><span class="label label-info">Modified</span> It is now possible to move a regions container by moving one of its region with the &#8220;Ctrl&#8221; shortcut key pressed. In the same way, it is now possible to select a regions container by clicking on one of its region with the &#8220;Ctrl&#8221; shortcut key pressed.</li>
 			<li><span class="label label-danger">Removed</span> It is no longer possible to change the workspace image of a diagram element with an image from an internal plugin via the &#8220;Set style to workspace image&#8221; action. This functionality affects a very small part of the use cases. The new UI of the &#8220;Set style to workspace image&#8221; action does not support this advanced functionality. However, it is still possible to go through Properties &gt; Style &gt; Workspace Image, then paste the path of the internal plugin image.</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
